--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Track Your Waste</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
     <h1>TrackYourWaste.com</h1>
-<p>Welcome to track you waste. Your one-stop shop for options to track waste, hazardous or otherwise.</p>
-</body>
-</html>
+    <div>
+        <p class="text-slate-50">Welcome to track you waste. Your one-stop shop for options to track waste, hazardous or otherwise.</p>
+    </div>
+{% endblock %}
