--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,36 @@
 {% load django_vite %}
 <!DOCTYPE html>
 <html lang="en">
+{% block head %}
 <head>
     <meta charset="UTF-8">
-    <title>Hazardous Waste Third Parties</title>
+    <title>Track Your Waste</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
     {% vite_hmr_client %}
-    {%  vite_asset 'js/hello.js' %}
 </head>
-<header>
-    <h1>TrackYourWaste.com</h1>
-    <nav>
-        <ul>
-            <li><a href="{% url 'core:index' %}">Home</a></li>
-            <li><a href="{% url 'esystem:system_list' %}">Hazardous Waste Systems</a></li>
-        </ul>
+{% endblock %}
+<header class="bg-secondary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'core:index' %}">
+                <h1>TrackYourWaste.com</h1>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <a class="nav-link" href="{% url 'core:index' %}">Home</a>
+                    <a class="nav-link" href="{% url 'esystem:system_list' %}">Hazardous Waste Systems</a>
+                </div>
+            </div>
+        </div>
     </nav>
 </header>
 <body>
