--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -1,8 +1,29 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>TrackYourWaste.com</h1>
-    <div>
-        <p class="text-slate-50">Welcome to track you waste. Your one-stop shop for options to track waste, hazardous or otherwise.</p>
+    <div class="my-3 mx-3">
+        <h2>Welcome</h2>
+        <div>
+            <p >Welcome to track you waste. A record of publicly available tools you can
+                use to track your hazardous waste, whether you're using
+                <a href="https://epa.gov/e-manifest">
+                    EPA's electronic manifest
+                </a>
+                or still using the
+                <a href="https://www.epa.gov/hwgenerators/uniform-hazardous-waste-manifest-instructions-sample-form-and-continuation-sheet">
+                    paper uniform manifest
+                </a>.
+            </p>
+        </div>
+        <div >
+            <div class="d-flex justify-content-center">
+                <h3>Start your search now!</h3>
+            </div>
+            <div class="d-flex justify-content-center">
+            <a class="btn btn-success" type="button" href="{% url 'esystem:system_list' %}">
+                    Search
+            </a>
+            </div>
+        </div>
     </div>
 {% endblock %}
