--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,27 @@
 {% load django_vite %}
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 {% block head %}
-<head>
-    <meta charset="UTF-8">
-    <title>Track Your Waste</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-    {% vite_hmr_client %}
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Track Your Waste</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+              crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                crossorigin="anonymous"></script>
+        <script src="{% static 'fontawesomefree/js/fontawesome.js' %}"></script>
+        <script src="{% static 'fontawesomefree/js/solid.js' %}"></script>
+        <script src="{% static 'fontawesomefree/js/brands.js' %}"></script>
+        {% vite_hmr_client %}
+    </head>
 {% endblock %}
-<header class="bg-secondary">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body class="bg-light">
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'core:index' %}">
                 <h1>TrackYourWaste.com</h1>
@@ -33,7 +40,6 @@
         </div>
     </nav>
 </header>
-<body>
 {% block content %}
     <!-- This is where child templates will insert their content -->
 {% endblock %}
