--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
                 <div class="navbar-nav me-auto mb-2 mb-lg-0">
                     <a class="nav-link" href="{% url 'core:index' %}">Home</a>
                     <a class="nav-link" href="{% url 'esystem:system_list' %}">Hazardous Waste Systems</a>
+                    <a class="nav-link" href="{% url 'waste:waste-list' %}">Wastes</a>
                 </div>
             </div>
         </div>
